fix: collect Stream with Collectors.toList()